--- a/ninio-core/pom.xml
+++ b/ninio-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>3.0.26-SNAPSHOT</version>
+		<version>3.0.26</version>
 	</parent>
 
 	<artifactId>ninio-core</artifactId>
