--- a/ninio-telnet/pom.xml
+++ b/ninio-telnet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>3.0.31</version>
+		<version>3.0.32-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-telnet</artifactId>
