--- a/ninio-ssh/pom.xml
+++ b/ninio-ssh/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>3.0.32</version>
+		<version>3.0.33-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-ssh</artifactId>
