--- a/ninio-dns/pom.xml
+++ b/ninio-dns/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>3.0.34</version>
+		<version>3.0.35-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ninio-dns</artifactId>
