--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -41,6 +41,14 @@ com.davfx.ninio.http {
 			extension = ".pdf"
 			contentType = "application/pdf"
 		}
+		{
+			extension = ".mov"
+			contentType = "video/quicktime"
+		}
+		{
+			extension = ".m4v"
+			contentType = "video/mp4"
+		}
 	]
 	
 	service {
