DnsClient fix sync resolution only. DnsClient timeout in HttpClient.

--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -2,6 +2,7 @@ com.davfx.ninio.http {
 	gzip.buffer = 4 KiB
 	
 	keepalive.timeout = 1 minute
+	dns.timeout = 10 seconds
 	redirect.max = 10
 	
 	file.contentTypes = [
