Some tests and required pom.xml (including ninio-string)

--- a/ninio-ping/pom.xml
+++ b/ninio-ping/pom.xml
@@ -16,5 +16,9 @@
 			<groupId>com.davfx.ninio</groupId>
 			<artifactId>ninio-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.davfx.ninio</groupId>
+			<artifactId>ninio-string</artifactId>
+		</dependency>
 	</dependencies>
 </project>
