--- a/ninio-string/pom.xml
+++ b/ninio-string/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.davfx.ninio</groupId>
 		<artifactId>ninio</artifactId>
-		<version>3.0.40g</version>
+		<version>3.0.40h</version>
 	</parent>
 
 	<artifactId>ninio-string</artifactId>
