--- a/ninio-http/src/main/resources/com.davfx.ninio.http.conf
+++ b/ninio-http/src/main/resources/com.davfx.ninio.http.conf
@@ -41,6 +41,10 @@ com.davfx.ninio.http {
 			extension = ".pdf"
 			contentType = "application/pdf"
 		}
+		{
+			extension = ".svg"
+			contentType = "image/svg+xml"
+		}
 	]
 	
 	service {
